# servo-agent

./: .editorconfig  .gitignore  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  RELEASING.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  cla.yml  pages.yml  release.yml
bench/: read_page_bench.py
design/: servo-delight-page.md
docs/: api.md  architecture.md  backlog.md  contributing.md  index.md  quickstart.md  rfc-001-native-read-endpoint.md  roadmap.md  use-cases.md
examples/: README.md  extract_table_demo.py  research_read.py  scrape_fallback.py  site_qa.py  universal_read.py  watch_page.py
integrations/: README.md  deep_research_provider.py  schedule_watch.py  verify_site.py
src/servo_agent/: __init__.py  browser.py  cli.py  distill.py  selftest.py  server.py
tests/: conftest.py  test_browser.py  test_browser_lifecycle.py  test_cli.py  test_distill.py  test_server.py
tests/fixtures/: sample.html
web/: CNAME  README.md  index.html
web/info/: index.html
web/pc/: index.html
